@@ -1,5 +1,11 @@
 2012-01-31  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/fs/nilfs2.c (grub_nilfs2_super_block): Expand volume_name
+	over last_mounted as seen in image generated by mkfs.nilfs2.
+	(grub_nilfs2_label): Use sizeof for the size of s_volume_name.
+
+2012-01-31  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* grub-core/fs/fat.c (grub_fat_dir_entry) [MODE_EXFAT]: Expand label
 	to 15 UTF-16 characters as seen in FS generated by mkexfatfs.
 	(grub_fat_label) [MODE_EXFAT]: Use macros for size.
